force-app/main/default/objects/KimbleOne__EntityNotificationRule__c/KimbleOne__EntityNotificationRule__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Entity Notification Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity Notification Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>