force-app/main/default/objects/KimbleOne__EntityNotificationRule__c/fields/KimbleOne__EventType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EventType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>EntityNotificationEventType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Entity Notification Rules</relationshipLabel>
    <relationshipName>EntityNotificationRules</relationshipName>
    <type>Lookup</type>
</CustomField>