force-app/main/default/objects/KimbleOne__EntityNotificationRule__c/fields/KimbleOne__NotificationText__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__NotificationText__c</fullName>
    <label>Notification Detail</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>