force-app/main/default/objects/KimbleOne__EntityNotificationRule__c/fields/KimbleOne__Resource__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__Resource__c.KimbleOne__ResourceType__r.KimbleOne__HasMembers__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__Resource__c</referenceTo>
    <relationshipLabel>Entity Notification Rules</relationshipLabel>
    <relationshipName>EntityNotificationRules</relationshipName>
    <type>Lookup</type>
</CustomField>